CSS-Only/static/css/styles.css
/* style my body */
body {
    background-color: whitesmoke;
    color: #000;
    margin: 0;
    margin-bottom: 10px;
}

.container {
    width: 100%;
    /* margin: 0 auto; */
}

@media screen and (min-width: 600px) {
    body {
        margin:0 auto;
    }
}
h1, h2, h3, h4, h5, h6 {
    color: rgb(161, 63, 63);
}
.center {
    display: block;
    text-align: -webkit-center;
}
/* end of body style */



/* my intro section CSS */
.head {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: -webkit-center;
    padding: 10px;
    margin: 0 auto;
}

.head h1 {
    margin: 0 10px;
}

.avatar {
    width: 250px;
    height: 200px;
}
/* end of intro section */



/* start of city section */
.city {
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 500px;
    margin: 0 auto;
}

.city-info {
    text-align: justify;
}

@media screen and (max-width: 600px) {
    .city {
        flex-direction: column;
    };
}

.city div {
    margin: 20px;
}

.city > div > img {
    width: 200px;
    height: 200px;
}
/* end of city section */



/* start of foreign language section */
.foreign-language {
    display: block;
    text-align: -webkit-center;
}

.translation-table {
    border: 1px solid black;
    border-collapse: collapse;
    width: 50%;
}

@media screen and (max-width: 600px) {
    .translation-table {
        border: 1px solid black;
        border-collapse: collapse;
        width: 80%;
    }
}

.translation-table td {
    border: 1px solid black;
    padding: 4px;
}

/* end of foreign langauage section */




/* start of historical place */
.card {
    background-color: whitesmoke;
    margin: 5px;
    padding-bottom: 15px;
}

.historical-places {
    display: flex;
    justify-content: space-between;
}

.cites {
    width: 100%;
    margin: 10px;
}

.his-info img {
    float: left;
    padding: 0 10px 0px 0px;
}

.temp {
    margin-left: 10px;
    width: 200px;
    height: 200px;
}


@media (min-width: 0) and (max-width: 688px) {
    .head {
        flex-direction: column;
    }
    .historical-places {
        display: block;
        flex-direction: column;
        width: 80%;
        margin: 0 auto;
    }
    .his-info img {
        float: left;
    }
    .his-info p {
        text-align: justify;
    }
    .his-info {
        width: 100%;
        /* display: flex; */
    }
    .temp {
        width: 170px;
        height: 170px;
    }
    .cites {
        margin: auto;
    }
}

@media (min-width: 689px) and (max-width: 992px) {
    .historical-places {
        flex-wrap: nowrap;
    }
    .his-info img {
        float: none;
    }
    .swap-sides {
        flex-direction: row-reverse;
    }
    .swap-sides p {
        margin-left: 10px;
    }
}
/* end of historical place */

